--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
         goarch: ${{ matrix.goarch }}
         #goversion: "https://dl.google.com/go/go1.13.1.linux-amd64.tar.gz"
         project_path: "./cmd/ks"
-        release_tag: $(date)
+        release_tag: "test"
         build_flags: -v
         binary_name: "test-binary"
         extra_files: LICENSE README.md
