--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,8 +4,8 @@
 name: Go
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "main" ]
 
 jobs:
 
@@ -29,7 +29,7 @@ jobs:
         goarch: ${{ matrix.goarch }}
         #goversion: "https://dl.google.com/go/go1.13.1.linux-amd64.tar.gz"
         project_path: "./cmd/ks"
-        release_tag: "test"
+        release_name : "test3"
         build_flags: -v
         binary_name: "test-binary"
         extra_files: LICENSE README.md
