--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,12 +24,12 @@ jobs:
     - uses: actions/checkout@v3
     - uses: wangyoucao577/go-release-action@v1
       with:
-        #github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         #goversion: "https://dl.google.com/go/go1.13.1.linux-amd64.tar.gz"
         project_path: "./cmd/ks"
-        release_name : "test3"
+        release_name : "test4"
         build_flags: -v
         binary_name: "test-binary"
         extra_files: LICENSE README.md
